--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <div class="type-wrap">
                         <div id="typed-strings" class="typing">
                             <h2>Happy Birthday <i id="nae">Divu </i></h2>
+                            <h2>Happy Last Teen - 19 </h2>
                             <h2>Have a wonderful day</h2>
                             <h2>Filled with joy and happiness.</h2>
                         </div>
